# SpinSAT

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SAT_COMPETITION_RESEARCH.md  build.sh  codecov.yml  release-plz.toml  requirements-cloud.txt  requirements-tune.txt  run.sh
.config/: nextest.toml
.serena/: project.yml
campaigns/: cloud_test.yaml  smoke_test.yaml  tune_general_sat2017.yaml  tune_ode_full.yaml
docs/: HYBRID_DMM_CDCL_REQUIREMENTS.md
infra/: alert-benchmark-complete.json  alert-idle-vm.json
results/: 20260320_200505_small_phase1-baseline.json  20260320_200520_medium_phase1-baseline.json  20260320_200619_large_phase1-baseline.json  20260320_210146_large_phase3-heuristics.json  20260320_210201_medium_phase3-heuristics.json  20260320_212103_medium_phase4-optimized.json  20260320_212219_large_phase4-optimized.json  20260321_061735_large_phase4-flat-formula.json  20260321_062600_medium_phase4-flat-formula.json
scripts/: analyze_trace.py  bench.sh  benchmark_suite.py  build_worker_image.sh  campaign_config.py  check_sat.c  cloud_benchmark.py  cloud_optuna.py  cloud_worker.sh  compare_restart_modes.py  compare_results.py  download_competition_instances.py  gen_benchmarks.py  gen_random_sat.py  import_competition_data.py  init_benchmarks_db.py  init_benchmarks_pg.py  migrate_benchmarks_db.py  migrate_benchmarks_db_optuna.py  migrate_to_cloud_sql.py  monitoring.py  optuna_tune.py  perf_compare.py  split_competition_data.py  tune_restart_params.py  verify.py
src/: cdcl.rs  dmm.rs  formula.rs  integrator.rs  lib.rs  main.rs  parser.rs  (+6 more)
(+86 files in other folders)
