[package]
name = "spinsat"
version = "0.5.0"
edition = "2021"
description = "A dynamic SAT solver based on digital memcomputing machines"
license = "MIT"

[dependencies]
cadical-sys = "0.7.0"
cxx = "1.0"

[features]
trace = []

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
